--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -90,6 +90,7 @@
     <string name="action_font_and_color">Font and Color</string>
     <string name="action_set_background_image">Set background image</string>
     <string name="action_remove_background_image">Remove background image</string>
+    <string name="action_set_system_wallpaper">Set system wallpaper</string>
 
     <string name="action_toggle_keep_screen_on">Keep screen on</string>
     <string name="action_open_help">Help</string>
@@ -141,6 +142,16 @@
     <string name="title_restore_background_image">Background image detected. Do you want to restore it?</string>
     <string name="error_background_image_loading_failed">Couldn\'t load background image. Setting background color.</string>
     <string name="error_background_image_loading_from_gallery_failed">Failed to load image. Try another image.</string>
+
+
+
+    <!-- Termux System Wallpaper -->
+    <string name="error_termux_api_not_installed">Termux:API app not installed. Install it to enable termux-wallpaper.</string>
+    <string name="error_termux_wallpaper_not_found">termux-wallpaper not found. Run pkg install termux-api in Termux.</string>
+    <string name="error_termux_wallpaper_start_failed">Couldn\'t run termux-wallpaper. Using Android wallpaper setter.</string>
+    <string name="error_wallpaper_image_read_failed">Couldn\'t read the selected image. Check storage access or pick another image.</string>
+    <string name="error_wallpaper_image_write_failed">Couldn\'t save the image for wallpaper. Check storage access.</string>
+    <string name="error_wallpaper_set_failed">Couldn\'t set wallpaper.</string>
 
 
 
@@ -237,12 +248,17 @@
                     To enable it, make sure that appropriate portrait and landscape files are present.
                     If you want to set a new background, set it from context menu by long click on Terminal. (Default)</string>
                 <string name="termux_background_image_enabled_on">Background image will be enabled.</string>
+                <string name="termux_use_system_wallpaper_title">Use system wallpaper</string>
+                <string name="termux_use_system_wallpaper_on">Also set the Android system wallpaper when a background image is set.</string>
+                <string name="termux_use_system_wallpaper_off">Only update the in-app background; the system wallpaper stays unchanged.</string>
                 
                 <!-- Monet Background -->
                 <string name="termux_monet_background_enabled_title">Monet Background (Unstable)</string>
                 <string name="termux_monet_background_enabled_off">Terminal Monet Background will be disabled.
                     Turns the terminal background into monet (Default)</string>
                 <string name="termux_monet_background_enabled_on">Monet Background will be enabled.</string>
+                <string name="termux_terminal_background_opacity_title">Terminal background opacity</string>
+                <string name="termux_terminal_background_opacity_summary">Adjusts the translucency (alpha) of the terminal Monet background.</string>
                 
             <!-- Extra Keys Category -->
             <string name="termux_extrakeys_header">Extra Keys</string>
