--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -268,6 +268,18 @@
                 <string name="termux_extrakeys_blur_enabled_off">Extra Keys Blurred Background will be disabled.
                     Adds a transparent and blurred Background to Extra Keys. (May impact performance) (Default)</string>
                 <string name="termux_extrakeys_blur_enabled_on">ExtraKeys Blurred Background will be enabled.</string>
+
+            <!-- App Launcher Category -->
+            <string name="termux_app_launcher_header">App Launcher</string>
+
+                <string name="termux_app_launcher_button_count_title">Icon count</string>
+                <string name="termux_app_launcher_button_count_summary">Set the number of icons shown in the app launcher bar.</string>
+                <string name="termux_app_launcher_default_buttons_title">Default apps</string>
+                <string name="termux_app_launcher_default_buttons_summary">Comma-separated list of default apps to pin (for example: phone, telegram, spotify).</string>
+                <string name="termux_app_launcher_bar_height_title">Bar height</string>
+                <string name="termux_app_launcher_bar_height_summary">Height multiplier for the app launcher bar (1.0 = default).</string>
+                <string name="termux_app_launcher_icon_scale_title">Icon scaling</string>
+                <string name="termux_app_launcher_icon_scale_summary">Icon size multiplier (1.0 = default). Scales with bar height.</string>
                 
             <!-- Sessions Category -->
             <string name="termux_sessions_header">Sessions Menu</string>
