--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -248,8 +248,8 @@
                     To enable it, make sure that appropriate portrait and landscape files are present.
                     If you want to set a new background, set it from context menu by long click on Terminal. (Default)</string>
                 <string name="termux_background_image_enabled_on">Background image will be enabled.</string>
-                <string name="termux_use_system_wallpaper_title">Use system wallpaper</string>
-                <string name="termux_use_system_wallpaper_on">Also set the Android system wallpaper when a background image is set.</string>
+                <string name="termux_use_system_wallpaper_title">Sync system wallpaper</string>
+                <string name="termux_use_system_wallpaper_on">When setting a background image, also set the Android system wallpaper to match (improves Monet colors).</string>
                 <string name="termux_use_system_wallpaper_off">Only update the in-app background; the system wallpaper stays unchanged.</string>
                 
                 <!-- Monet Background -->
@@ -258,7 +258,12 @@
                     Turns the terminal background into monet (Default)</string>
                 <string name="termux_monet_background_enabled_on">Monet Background will be enabled.</string>
                 <string name="termux_terminal_background_opacity_title">Terminal background opacity</string>
-                <string name="termux_terminal_background_opacity_summary">Adjusts the translucency (alpha) of the terminal Monet background.</string>
+                <string name="termux_terminal_background_opacity_summary">Adjusts the translucency (alpha) of the terminal background overlay.</string>
+                <string name="termux_monet_overlay_enabled_title">Use Monet overlay color</string>
+                <string name="termux_monet_overlay_enabled_off">Use the overlay color defined in termux.properties.</string>
+                <string name="termux_monet_overlay_enabled_on">Use the current Monet surface color for the overlay.</string>
+                <string name="termux_terminal_blur_radius_title">Terminal blur amount</string>
+                <string name="termux_terminal_blur_radius_summary">Blur radius for terminal content (Android 12+). 0 disables blur.</string>
                 
             <!-- Extra Keys Category -->
             <string name="termux_extrakeys_header">Extra Keys</string>
@@ -268,6 +273,10 @@
                 <string name="termux_extrakeys_blur_enabled_off">Extra Keys Blurred Background will be disabled.
                     Adds a transparent and blurred Background to Extra Keys. (May impact performance) (Default)</string>
                 <string name="termux_extrakeys_blur_enabled_on">ExtraKeys Blurred Background will be enabled.</string>
+                <string name="termux_extrakeys_blur_radius_title">Extra keys blur amount</string>
+                <string name="termux_extrakeys_blur_radius_summary">Blur radius for the extra keys and app search bar.</string>
+                <string name="termux_app_bar_opacity_title">Extra keys/app bar opacity</string>
+                <string name="termux_app_bar_opacity_summary">Background opacity for extra keys and app search bar when blur is enabled.</string>
 
             <!-- App Launcher Category -->
             <string name="termux_app_launcher_header">Launcher: Settings</string>
@@ -303,6 +312,8 @@
                 <string name="termux_sessions_blur_enabled_off">Sessions Blurred Background will be disabled.
                     Adds a transparent and blurred Background to Sessions Menu. (May impact performance) (Default)</string>
                 <string name="termux_sessions_blur_enabled_on">Sessions Blurred Background will be enabled.</string>
+                <string name="termux_sessions_blur_radius_title">Sessions blur amount</string>
+                <string name="termux_sessions_blur_radius_summary">Blur radius for the sessions menu background.</string>
 
 
 
