Restructure settings and add privileged access policy controls

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -168,6 +168,13 @@
     <string name="termux_preferences_title">&TERMUX_APP_NAME;</string>
     <string name="termux_preferences_summary">Preferences for &TERMUX_APP_NAME; app</string>
 
+    <string name="termux_launcher_preferences_title">Launcher</string>
+    <string name="termux_launcher_preferences_summary">Launcher layout, search, and icon preferences</string>
+    <string name="termux_launcher_search_preferences_summary">Configure launcher search behavior and default pinned apps</string>
+    <string name="termux_launcher_layout_preferences_summary">Configure launcher bar layout and sizing</string>
+    <string name="termux_launcher_icons_header">Launcher: Icons</string>
+    <string name="termux_launcher_icons_preferences_summary">Configure launcher icon rendering options</string>
+
         <!-- Debugging Preferences -->
         <string name="termux_debugging_preferences_title">Debugging</string>
         <string name="termux_debugging_preferences_summary">Preferences for debugging</string>
@@ -240,6 +247,40 @@
         <!-- Termux Style Preferences -->
         <string name="termux_style_preferences_title">&TERMUX_APP_NAME; Settings</string>
         <string name="termux_style_preferences_summary">Preferences for &TERMUX_APP_NAME; appearance and customisation</string>
+
+        <string name="termux_privileged_access_preferences_title">Privileged Access</string>
+        <string name="termux_privileged_access_preferences_summary">Shizuku backend, fallback policy, and privileged endpoint controls</string>
+
+            <string name="termux_privileged_access_overview_title">Overview</string>
+            <string name="termux_privileged_backend_status_title">Backend Status</string>
+            <string name="termux_privileged_backend_status_summary">Current backend state and permission status</string>
+
+            <string name="termux_privileged_access_backend_title">Backend Policy</string>
+            <string name="termux_privileged_master_enabled_title">Enable privileged features</string>
+            <string name="termux_privileged_master_enabled_on">Privileged backend and endpoints are enabled.</string>
+            <string name="termux_privileged_master_enabled_off">All privileged backend operations are disabled.</string>
+            <string name="termux_privileged_prefer_shizuku_title">Prefer Shizuku backend</string>
+            <string name="termux_privileged_prefer_shizuku_on">Try Shizuku first, then fallback based on policy.</string>
+            <string name="termux_privileged_prefer_shizuku_off">Skip Shizuku and use shell fallback path when allowed.</string>
+            <string name="termux_privileged_allow_shell_fallback_title">Allow shell fallback (su/rish)</string>
+            <string name="termux_privileged_allow_shell_fallback_on">If Shizuku is unavailable, shell fallback may be used.</string>
+            <string name="termux_privileged_allow_shell_fallback_off">Do not use shell fallback; remain unavailable if Shizuku is unusable.</string>
+            <string name="termux_privileged_request_permission_title">Request Shizuku permission</string>
+            <string name="termux_privileged_request_permission_summary">Request or re-check Shizuku permission now</string>
+            <string name="termux_privileged_request_permission_requested">Shizuku permission requested.</string>
+            <string name="termux_privileged_request_permission_unavailable">Permission request unavailable for current backend state.</string>
+
+            <string name="termux_privileged_endpoints_title">Allowed Privileged Endpoints</string>
+            <string name="termux_privileged_endpoint_request_permission_title">Allow /v1/privileged/request-permission</string>
+            <string name="termux_privileged_endpoint_request_permission_summary">Controls Tooie permission-request endpoint availability.</string>
+            <string name="termux_privileged_endpoint_exec_title">Allow /v1/exec</string>
+            <string name="termux_privileged_endpoint_exec_summary">Controls Tooie privileged exec endpoint availability.</string>
+            <string name="termux_privileged_endpoint_brightness_title">Allow /v1/system/brightness</string>
+            <string name="termux_privileged_endpoint_brightness_summary">Controls Tooie brightness endpoint availability.</string>
+            <string name="termux_privileged_endpoint_volume_title">Allow /v1/system/volume</string>
+            <string name="termux_privileged_endpoint_volume_summary">Controls Tooie volume endpoint availability.</string>
+            <string name="termux_privileged_endpoint_lock_screen_title">Allow /v1/screen/lock</string>
+            <string name="termux_privileged_endpoint_lock_screen_summary">Controls Tooie lock-screen endpoint availability.</string>
 
             <!-- Background Category -->
             <string name="termux_background_header">Background</string>
